css/thesis.css
:root {
  --body-size: 1.5rem;
  --body-line-height: 1.3;
  --baseline: calc(var(--body-size) * var(--body-line-height));
  --code-size: calc(var(--body-size) * 0.9);
  --notes-size: 0.8rem;
  --notes-line-height: 1.1;
}

@font-face {
  font-family: 'Server Mono';
  src:
    url('../assets/fonts/ServerMono-Regular.woff2') format('woff2'),
    url('../assets/fonts/ServerMono-Regular.woff') format('woff');
  font-display: swap;
}

@font-face {
  font-family: 'Server Mono';
  src:
    url('../assets/fonts/ServerMono-RegularOblique.woff2') format('woff2'),
    url('../assets/fonts/ServerMono-RegularOblique.woff') format('woff');
  font-style: italic;
  font-display: swap;
}

* {
  font-family: 'Times New Roman', Times, serif;
  font-weight: normal;
  line-height: var(--body-line-height);
  font-size: var(--body-size);
  /* font-feature-settings: 'dlig' 1; */
}

p:not(.table-of-contents p, p.code, .subtle-heading), h3 {
  line-height: var(--body-line-height);
  margin-bottom: var(--baseline);
}

a {
  color: black;
  text-decoration: none;
}

p {
  /* text-wrap: pretty; */
}

sup,
sub {
  /* stop interfering with line height */
  vertical-align: baseline;
  position: relative;
  top: -0.4em;
}

sup a {
  font-family: 'Server Mono', monospace;
  font-size: var(--notes-size);
}

figure {
  width: 100%;
  max-width: 100%;
}

figcaption,
figcaption i {
  font-family: 'Server Mono', monospace;
  font-size: var(--notes-size);
  line-height: var(--notes-line-height);
  margin-bottom: var(--baseline);
}

figcaption,
.footnotes p {
  overflow-wrap: break-word;
}

.img-wrap img {
  width: 100%;
  height: auto;
  object-fit: contain;
}

.footnotes p {
  font-family: 'Server Mono', monospace;
  font-size: var(--notes-size);
  line-height: var(--notes-line-height);
}

.code {
  font-family: 'Server Mono', monospace;
  font-size: var(--code-size);
}

.subtle-heading {
  margin-bottom: 0;
}

@media screen {
  .thesis-layout {
    padding: 10px;
    display: grid;
    grid-template-columns: repeat(9, minmax(0, 1fr));
    overflow: hidden;
    column-gap: 60px;
  }

  h1,
  h2,
  h3,
  h4,
  h5,
  h6,
  p,
  div {
    grid-column: 3 / 6;
  }

  .web-index {
    position: fixed;
    width: calc(100% / 7 * 2);
    z-index: 20;
    display: none;
  }

  figure {
    grid-column: 3 / 6;
  }

  figure.ext {
    grid-column: 6;
  }

  figure.ext figcaption {
    margin-bottom: 0;
  }
}

@media screen and (max-width: 1600px) {
  .thesis-layout {
    grid-template-columns: repeat(7, minmax(0, 1fr));
  }
}

